[fix]#10812 overflow pb on icons view's comments lightbox

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -1174,7 +1174,7 @@ input-password {
         input[type=checkbox]#rememberMe {
             width: 11px;
         }
-        
+
     }
     form.nostyle {
         input {
@@ -1965,7 +1965,7 @@ textarea:focus {
         margin: 8px;
         width: auto;
         height: auto;
-        overflow: hidden!important;
+        overflow: hidden;
         vertical-align: top;
         .img.container {
             padding: 0;
